<resources>
    <string name="app_name">AS</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="i_agree_with_the_terms_and_conditions">I agree with the Terms and Conditions</string>
    <string name="email_field_can_not_be_empty">Email field can not be empty</string>
    <string name="password_field_can_not_be_empty">Password field can not be empty</string>
    <string name="please_accept">Please accept Terms and Conditions to continue</string>
    <string name="api_key_gmap" translatable="false">AIzaSyAxENdhpDf2Ek67uH9smjQLstVgza3yGlk</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="open_navigation_drawer" translatable="false">Open navigation drawer</string>
    <string name="close_navigation_drawer" translatable="false">Close navigation drawer</string>
    <string name="the_email_is_not_correct">The email specified is not correct</string>
    <string name="password_must_have_at_leat_6_characters">Password must have at least 6 characters</string>
    <string name="successfully_registered">Successfully registered user. Please log in.</string>
    <string name="registration_failed">Registration failed</string>
</resources>