<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LogInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_log_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!--TODO ? -->
            <!--        <com.google.android.material.textfield.TextInputLayout-->
            <!--            android:id="@+id/logInFragmentEditTextPassword"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            app:layout_constraintBottom_toTopOf="@+id/logInFragmentLogInButton"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintHorizontal_bias="0.442"-->
            <!--            app:counterEnabled="true"-->
            <!--            app:errorEnabled="true"-->
            <!--            app:passwordToggleEnabled="true"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="@string/password"-->
            <!--                android:inputType="textPassword"-->
            <!--                />-->

            <!--        </com.google.android.material.textfield.TextInputLayout>-->

            <EditText
                android:id="@+id/logInFragmentEditTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/e_mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/logInFragmentEditTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInFragmentEditTextEmail" />

            <Button
                android:id="@+id/logInFragmentLogInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:background="@color/title_blue"
                android:foreground="@drawable/btn_ripple"
                android:onClick="logInOnClick"
                android:padding="10dp"
                android:text="@string/log_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInFragmentEditTextPassword" />

            <TextView
                android:id="@+id/logInFragmentSignUpTextView"
                android:layout_width="229dp"
                android:layout_height="26dp"
                android:layout_marginBottom="30dp"
                android:onClick="goToRegisterOnClick"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInFragmentLogInButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
